--- a/second.html
+++ b/second.html
@@ -21,10 +21,13 @@
         <h1 style="font-family: cursive;padding:0%;margin:0%;color: aqua;text-align: center;font-size: 40px;">GarV</h1>
         <br>
         <p>Normal<br>Text hun par agli line mai</p>
-        <div id="images">
-        <img width="600px" height="450px" src="https://images.unsplash.com/photo-1607604276583-eef5d076aa5f?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
-        <img width="300px" height="450px" src="https://images.unsplash.com/photo-1590796583326-afd3bb20d22d?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">    
-        <img width="400px" height="450px" src="4214-cat.gif">
+        
+        <main>
+                <img width="600px" height="600px" src="https://images.unsplash.com/photo-1607604276583-eef5d076aa5f?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+                <img width="600px" height="600px" src="4214-cat.gif">
+        </main>
+        <div>
+            <img height="800px" width="500px" src="https://images.unsplash.com/photo-1590796583326-afd3bb20d22d?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">    
         </div>
         <br>
         <h2>A Very Intresting Paragraph</h2>
