--- a/netflix/profiles/p2.html
+++ b/netflix/profiles/p2.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>tanisimondal</title>
+    <title>NETFLIX</title>
 </head>
 <body>
-    <h1> TANCY KI PROFILE </h1>
+    <h1> MERI PROFILE </h1>
 </body>
 </html>
