--- a/second.html
+++ b/second.html
@@ -16,11 +16,13 @@
         </style>
     </head>
     <body style= "color: greenyellow;">
-        <h1 id="head" style="font-family: cursive;padding:0%;margin:0%;color:  rgb(255, 213, 0);text-align: center;font-size: 60px;">Vella GarV</h1>
+        <h1 id="head" style="font-family: cursive;padding:0%;margin:0%;color:  rgb(27, 217, 255);text-align: center;font-size: 60px;">Vella GarV</h1>
         <br>
         <p>Normal<br>Text hun par agli line mai</p>
         <br>
         <a id="valcards" href="http://127.0.0.1:5500/cards/index.html">Val Cards</a>
+        <br>
+        <a id="valcards" href="http://127.0.0.1:5500/netflix/profile.html">Netflix(in progess)</a>
         <main>
                 <img class="bada" width="400px" height="400px" src="https://images.unsplash.com/photo-1607604276583-eef5d076aa5f?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
                 <img class="bada" width="400px" height="400px" src="4214-cat.gif">
